--- a/Atividade3/Atividade3.html
+++ b/Atividade3/Atividade3.html
@@ -7,6 +7,8 @@
     <meta name="keywords" content="Segurança, Web">
     <meta name="author" content="Anderson">
     <title>Segurança na Web</title>
+
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
